# Receipt_generator

./: CMakeLists.txt  data.cpp  data.h  main.cpp  output.cpp  output.h
.cache/clangd/index/: data.cpp.480479D878F87A31.idx  data.cpp.8BDEA93BE7992375.idx  data.h.0AC3F67D62F4B3DC.idx  data.h.7978779543D0A3BD.idx  main.cpp.5461DE00A570EEAA.idx  main.cpp.69B2CAEEAEFF1C5F.idx  output.cpp.548646E36DCB7324.idx  output.cpp.C8E9337FFA0165F2.idx  output.h.E6322EAAF2E84FD6.idx  output.h.E736336100C10BE3.idx
